final styling changes -resizes iframe to properly fit on both mobile and desktop layouts -shrinks gaps in weather/sun-moon content divs on desktop layout -fixes margin/padding for star-map so background doesn't go up beyond the tab buttons

--- a/css/css-grid.css
+++ b/css/css-grid.css
@@ -4,23 +4,23 @@
 header {
   display: grid;
   grid-template-columns: repeat(2, auto);
-  grid-template-rows: repeat(2, auto);
+  grid-template-rows: repeat(3, auto);
+}
+
+#app-name {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  align-items: center;
 }
 
 #location-header {
   grid-column: 1 / 2;
-  grid-row: 1 /2
+  grid-row: 2 / 3;
 }
 
 #location-name {
   grid-column: 1 / 3;
-  grid-row: 2 / 3;
-}
-
-h2 {
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
-  justify-self: flex-end;
+  grid-row: 3 / 4;
 }
 
 .search {
